--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -86,7 +86,7 @@
 }
 /* END: Home styles */
 
-/* START: Car Card styles */
+/* START: Record Card styles */
 .record-card {
   @apply flex flex-col p-6 justify-center items-start text-black-100 bg-primary-blue-100 hover:bg-white hover:shadow-md rounded-3xl;
 }
@@ -130,9 +130,9 @@
 .record-card__btn-container {
   @apply hidden group-hover:flex absolute bottom-0 w-full z-10;
 }
-/* END: Car Card styles */
+/* END: Record Card styles */
 
-/* START: Car Details styles */
+/* START: Record Details styles */
 .record-details__dialog-panel {
   @apply relative w-full max-w-lg max-h-[90vh] overflow-y-auto transform rounded-2xl bg-white p-6 text-left shadow-xl transition-all flex flex-col gap-5;
 }
@@ -144,7 +144,7 @@
 .record-details__main-image {
   @apply relative w-full h-40 bg-pattern bg-cover bg-center rounded-lg;
 }
-/* END: Car Details styles */
+/* END: Record Details styles */
 
 /* START: Custom Filter styles */
 .custom-filter__btn {
@@ -200,7 +200,7 @@
 }
 /* END: searchbar styles */
 
-/* START: search manufacturer styles */
+/* START: search records styles */
 .search-records {
   @apply flex-1 max-sm:w-full flex justify-start items-center;
 }
@@ -216,4 +216,58 @@
 .search-records__option {
   @apply cursor-default select-none py-2 pl-10 pr-4;
 }
-/* END: search manufacturer styles */
+/* END: search records styles */
+
+/* START: create records styles */
+.create-records {
+  @apply flex-1 max-sm:w-full flex justify-start items-center;
+}
+
+.create-records__input {
+  @apply w-full h-[48px] mt-2 pl-4 p-4 rounded-full max-sm:rounded-full bg-light-white outline-none cursor-text text-sm;
+}
+
+.create-records__options {
+  @apply absolute mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm;
+}
+
+.create-records__option {
+  @apply cursor-default select-none py-2 pl-10 pr-4;
+}
+/* END: create records styles */
+
+/* START: modal styles */
+.modal {
+  @apply fixed z-10 left-0 right-0 top-0 bottom-0 mx-auto bg-black/80;
+}
+
+.modal_wrapper {
+  @apply flex justify-start items-center flex-col absolute h-[95%] w-full bottom-0 bg-white rounded-t-3xl lg:px-40 px-8 pt-14 pb-72 overflow-auto;
+}
+
+.modal-head-text {
+  @apply md:text-5xl text-3xl font-extrabold text-left max-w-5xl w-full;
+}
+/* END: modal styles */
+
+/* START: form styles */
+.form {
+  @apply flex-col w-full lg:pt-24 pt-12 gap-10 text-lg max-w-5xl mx-auto;
+}
+
+.form_image-container {
+  @apply w-full lg:min-h-[400px] min-h-[200px] relative;
+}
+
+.form_image-label {
+  @apply z-10 text-center w-full h-full p-20 text-gray-100 border-2 border-gray-50 border-dashed;
+}
+
+.form_image-input {
+  @apply absolute z-30 w-full opacity-0 h-full cursor-pointer;
+}
+
+.form_field-input {
+  @apply w-full outline-0 bg-light-white-100 rounded-xl p-4;
+}
+/* END: form styles */
